--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
-  "homepage": "http://nipunajayaweera.github.io/todos-react-app"
+  "homepage": "http://nipunajayaweera.github.io/todos"
 }
