--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "todos-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nipunajayaweera.github.io/todos",
+  "devDependencies": {
+    "gh-pages": "1.2.0",
+    "react-scripts": "1.1.4"
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
     "react": "^16.4.1",
@@ -9,19 +14,12 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.2.0",
-    "bootstrap": "^4.1.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
-  },
-  "homepage": "http://nipunajayaweera.github.io/todos"
+    "eject": "react-scripts eject"
+  }
 }
+
