--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+, {
   "name": "todos-react-app",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +11,8 @@
     "bootstrap": "^4.1.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+   "yarn": "^1.9.2"
   },
   "scripts": {
     "predeploy": "npm run build",
